Added new * UnitTests